--- a/.bsshrc
+++ b/.bsshrc
@@ -14,7 +14,8 @@ HISTCONTROL=ignoreboth
 
 # append to the history file, don't overwrite it
 shopt -s histappend
-
+#bashrc from RobinTrigon
+# github link - https://github.com/RobinTrigon/bashrc
 # for setting history length see HISTSIZE and HISTFILESIZE in bash(1)
 HISTSIZE=1000
 HISTFILESIZE=2000
